# trainingRayTrace

./: .gitignore  CMakeLists.txt  README.md  main.cpp
utility/: Camera.cpp  Camera.h  DielectricMaterial.cpp  DielectricMaterial.h  Hitable.h  HitableList.cpp  HitableList.h  LambertMaterial.cpp  LambertMaterial.h  Material.h  MetalMaterial.cpp  MetalMaterial.h  Other.cpp  Other.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h
